kube/services/baz/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: baz
  labels:
    istio-injection: enabled
