kube/services/baz/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baz
  labels:
    app: baz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: baz
  template:
    metadata:
      labels:
        app: baz
    spec:
      serviceAccountName: baz
      containers:
      - name: hello
        image: k3d-local-registry:5555/hello:0.0.1
        imagePullPolicy: Always
