kube/services/baz/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: baz
  labels:
    app: baz
    service: baz
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: baz
